# 4G-sierra

./: .gitignore  .gitlab-ci.yml  Dockerfile.zephyr  Makefile  README.md  docker.compose.yaml  flash_cig.py  zephyr.yml
.github/workflows/: 4G.yml
mesh/boards/arm/dual_inventive_stm32f407/: Kconfig.defconfig  dual_inventive_stm32f407.dts  dual_inventive_stm32f407_defconfig
mesh/common/: CHANGELOG.md
mesh/common/mk/: common.mk
mesh/common/openocd-templates/: openocd-f4.cfg
mesh/common/version/: versionator
mesh/inc/: heartbeat_handler.h
mesh/src/: gsm_driver.c  heartbeat_handler.c  lora_driver.c  main.c  state_machine.c
mesh/unit_test_prototype/: prj.conf  testcase.yaml
mesh/unit_test_prototype/boards/: native_posix.overlay
mesh/unit_test_prototype/mocks/: mocks.h
mesh/unit_test_prototype/src/: gsm_driver_mock.c  main.c
samples/mesh/: CMakeLists.txt  prj.conf
samples/mesh/boards/posix/native_posix/: native_posix.dts  native_posix_64_defconfig
samples/mesh/common/: .gitignore  README.md
samples/mesh/common/gdb/: ci.gdb  common.gdb  gdb.gdb
samples/mesh/common/mk/: development.mk  gdb.mk
samples/mesh/common/openocd-templates/: openocd-f1.cfg
samples/mesh/common/version/: Version.txt  version.h.in
samples/mesh/inc/: gsm_driver.h  lora_driver.h  node.h  sram_setup.h
samples/mesh/src/: node.c  sram_setup.c
samples/mesh/unit_test_prototype/: CMakeLists.txt
samples/mesh/unit_test_prototype/boards/arm/dual_inventive_stm32f407/: dual_inventive_stm32f407.dts  dual_inventive_stm32f407.yaml  dual_inventive_stm32f407_defconfig
(+2 files in other folders)
